Fix Image Issue on IE - Image to Small
hope fixes #14

this is a little hard to inspect because I don't know how to see the
actual surveys where the images are and I can't inspect elements within
browser stack. I think this should fix any issues though.

--- a/redcap_v5.2.3/Resources/css/style_heh.css
+++ b/redcap_v5.2.3/Resources/css/style_heh.css
@@ -2354,3 +2354,5 @@ table.mtxchoicetable td.data_mtxchoice input[type="radio"], table.mtxchoicetable
 .randomizationDuplLabel { display:none; }
 
 #changeFont span {font-size:14px!important; font-family:Verdana, Arial, Geneva, sans-serif; color:#424242;}
+
+td.label img{width:auto!important;}
